--- a/dashboard/templates/jobs/jobs_home.html
+++ b/dashboard/templates/jobs/jobs_home.html
@@ -12,7 +12,7 @@
   <div class="col-xs-12">
     <div class="card-pf card-pf-utilization" id="card-packages-summary" style="min-height: 750px;">
       <div class="card-pf-heading">
-        <h1 class="card-pf-title">Predefined Jobs
+        <h1 class="card-pf-title">Tasks
         <small class="pull-right">
             {% if jobs_count > 0 and job_last_ran_on %}
                 <span class="text-muted">Last successful job ran on <span class="text-info">{{ job_last_ran_on }}</span>
