--- a/dashboard/templates/summary.html
+++ b/dashboard/templates/summary.html
@@ -4,7 +4,7 @@
       <h2 class="card-pf-title">
         <span class="fa fa-language"></span>
         <span class="card-pf-aggregate-status-count">{{ locales_len }} <small>Languages</small></span>
-        <span class="text-info">Trends across releases</span>
+        <span class="text-info">Progress across releases</span>
       </h2>
       <div class="card-pf-body">
         <p class="card-pf-aggregate-status-notifications">
@@ -38,13 +38,15 @@
   <div class="col-xs-12 col-sm-6 col-md-3">
     <div class="card-pf card-pf-accented card-pf-aggregate-status card-pf-aggregate-status-mini">
       <h2 class="card-pf-title">
-        <span class="fa fa-server"></span>
-        <span class="card-pf-aggregate-status-count">{{ platforms_len }} <small>Platforms</small></span>
-        <span class="text-info">Latest translation statistics</span>
+        <a href="{% url 'jobs-logs' %}">
+          <span class="fa fa-bolt"></span>
+          <span class="card-pf-aggregate-status-count">{{ jobs_templates_len }} <small>Job Templates</small></span>
+          <span class="text-info">Workflow Automation</span>
+        </a>
       </h2>
       <div class="card-pf-body">
         <p class="card-pf-aggregate-status-notifications">
-          <a href="{% url 'settings-trans-platforms' %}">
+          <a href="{% url 'jobs-yml-based' %}">
             <span class="card-pf-aggregate-status-notification">
               <span class="fa fa-angle-double-right text-primary"></span>
             </span>
@@ -56,15 +58,13 @@
   <div class="col-xs-12 col-sm-6 col-md-3">
     <div class="card-pf card-pf-accented card-pf-aggregate-status card-pf-aggregate-status-mini">
       <h2 class="card-pf-title">
-        <a href="{% url 'jobs-logs' %}">
-          <span class="fa fa-bolt"></span>
-          <span class="card-pf-aggregate-status-count">{{ jobs_len }} <small>Jobs</small></span>
-          <span class="text-info">Workflow Automation</span>
-        </a>
+        <span class="fa fa-server"></span>
+        <span class="card-pf-aggregate-status-count">{{ platforms_len }} <small>Platforms</small></span>
+        <span class="text-info">Latest translation statistics</span>
       </h2>
       <div class="card-pf-body">
         <p class="card-pf-aggregate-status-notifications">
-          <a href="{% url 'jobs-yml-based' %}">
+          <a href="{% url 'settings-trans-platforms' %}">
             <span class="card-pf-aggregate-status-notification">
               <span class="fa fa-angle-double-right text-primary"></span>
             </span>
