--- a/dashboard/templates/releases/_releases_summary.html
+++ b/dashboard/templates/releases/_releases_summary.html
@@ -4,7 +4,7 @@
   <div class="row row-cards-pf">
     {% for release, summary in relsummary.items %}
     <div class="col-xs-12 col-sm-4 col-md-3">
-      <div class="card-pf card-releases-ts">
+      <div class="card-pf card-pf-accented card-releases-ts">
         <h2 class="card-pf-title">
           {{ release }}
           <span class="pull-right">
