--- a/dashboard/templates/releases/_workload_per_lang.html
+++ b/dashboard/templates/releases/_workload_per_lang.html
@@ -1,3 +1,4 @@
+<div style="min-height: 600px">
 <table class="table table-bordered table-hover">
   <thead>
     <tr>
@@ -23,3 +24,4 @@
     {% endfor %}
   </tbody>
 </table>
+</div>
