CI Pipeline UI(s)

--- a/dashboard/templates/jobs/jobs_cleanup.html
+++ b/dashboard/templates/jobs/jobs_cleanup.html
@@ -4,7 +4,7 @@
 {% block pagecontent %}
 <div class="row row-cards-pf">
   <div class="col-xs-12">
-    <div class="card-pf card-pf-utilization" id="card-packages-summary" style="min-height: 750px;">
+    <div class="card-pf card-pf-utilization content-area" id="card-packages-summary">
       <div class="card-pf-heading">
         <h2 class="card-pf-title">Clean Up</h2>
       </div>
