--- a/dashboard/templates/releases/release_view.html
+++ b/dashboard/templates/releases/release_view.html
@@ -64,7 +64,7 @@
       <a href="{{request.META.HTTP_REFERER}}" class="btn btn-default btn-small">Go Back</a>
     </span>
   </div>
-  <div class="panel-body" style="min-height: 600px">
+  <div class="panel-body content-area">
     <h2>{{ release_branch }}</h2><br/>
     <div id="releasegraph" class="panel panel-default table-responsive"></div>
     <center>
