--- a/dashboard/templates/ci/_ci_pipeline.html
+++ b/dashboard/templates/ci/_ci_pipeline.html
@@ -12,7 +12,7 @@
             <!--<input type="checkbox">-->
           <!--</div>-->
           <div class="list-view-pf-actions">
-            <button class="btn btn-default">Details</button>
+            <a href="{% url 'pipeline-details' pipeline %}" class="btn btn-default">Details</a>
             {% if request.user.is_staff or pipeline.ci_package.created_by == request.user.email %}
               <script>
                 function removePipeline(e){waitSpinner.show(),$.ajax({beforeSend:function(e,s){csrfSafeMethod(s.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}"))},type:"POST",url:"{% url 'ajax-remove-pipeline' %}",data:{pipeline_id:e,user:"{{ pipeline.ci_package.created_by }}"},success:function(e){waitSpinner.hide(),$("#div-ci-pipelines").load(location.href+" #div-ci-pipelines"),$("body").append('<div class="toast-pf toast-pf-max-width toast-pf-top-right alert alert-success alert-dismissable fade in"><button type="button" class="close" data-dismiss="alert" aria-hidden="true"><span class="pficon pficon-close"></span></button><span class="pficon pficon-ok"></span><strong>CI Pipeline</strong> removed successfully!</div>')},error:function(e){waitSpinner.hide(),console.error(e.status,e.responseText),$("body").append('<div class="toast-pf toast-pf-max-width toast-pf-top-right alert alert-danger alert-dismissable fade in"><button type="button" class="close" data-dismiss="alert" aria-hidden="true"><span class="pficon pficon-close"></span></button><span class="pficon pficon-error-circle-o"></span><strong>CI Pipeline</strong> could not be removed!</div>')}})}function refreshPipeline(e){waitSpinner.show(),$.ajax({beforeSend:function(e,s){csrfSafeMethod(s.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}"))},type:"POST",url:"{% url 'ajax-refresh-pipeline' %}",data:{pipeline_id:e,user:"{{ pipeline.ci_package.created_by }}"},success:function(e){waitSpinner.hide(),location.reload()},error:function(e){waitSpinner.hide(),console.error(e.status,e.responseText),$("body").append('<div class="toast-pf toast-pf-max-width toast-pf-top-right alert alert-danger alert-dismissable fade in"><button type="button" class="close" data-dismiss="alert" aria-hidden="true"><span class="pficon pficon-close"></span></button><span class="pficon pficon-error-circle-o"></span><strong>CI Pipeline</strong> could not be refreshed!</div>')}})}
@@ -25,8 +25,7 @@
                     <li><a id="idRefreshPipeline"
                            onClick='javascript:refreshPipeline({{ pipeline.ci_pipeline_id }})'>
                       <span class="fa fa-refresh" aria-hidden="true"></span> Refresh</a></li>
-                    <li><a href="#"><span class="pficon pficon-settings" aria-hidden="true"></span> Configure</a></li>
-                    <li><a href="#"><span class="pficon pficon-orders" aria-hidden="true"></span> View Logs</a></li>
+                    <li><a href="#"><span class="pficon pficon-edit" aria-hidden="true"></span> Edit</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a id="idRemovePipeline"
                            onClick='javascript:removePipeline({{ pipeline.ci_pipeline_id }})'>
