--- a/dashboard/templates/jobs/jobs_home.html
+++ b/dashboard/templates/jobs/jobs_home.html
@@ -10,7 +10,7 @@
 {% block pagecontent %}
 <div class="row row-cards-pf">
   <div class="col-xs-12">
-    <div class="card-pf card-pf-utilization" id="card-packages-summary" style="min-height: 750px;">
+    <div class="card-pf card-pf-utilization content-area" id="card-packages-summary">
       <div class="card-pf-heading">
         <h1 class="card-pf-title">Tasks
         <small class="pull-right">
