--- a/dashboard/templates/jobs/jobs_yml_based.html
+++ b/dashboard/templates/jobs/jobs_yml_based.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <hr/>
-        <div id="jobTemplate" style="min-height:600px">
+        <div id="jobTemplate" class="content-area">
             {% tag_job_form 'dummy' %}
         </div>
 
