--- a/dashboard/templates/ci/pipeline_configurations.html
+++ b/dashboard/templates/ci/pipeline_configurations.html
@@ -55,5 +55,7 @@
         <h4>Sync Schedule</h4>
       </div>
     </div>
+    <h4 class="text-muted" style="margin-top:5%">
+      <span class="pficon pficon-maintenance"> Under Construction</span></h4>
   </div>
 {% endblock %}
