--- a/dashboard/templates/ci/pipeline_sync_logs.html
+++ b/dashboard/templates/ci/pipeline_sync_logs.html
@@ -5,26 +5,84 @@
 {% endblock %}
 
 {% block pipeline-heading %}
-  {% if ci_pipeline.ci_project_details_json|get_item:"name" %}
+  {% if logs.0.ci_pipeline.ci_project_details_json|get_item:"name" %}
     <small class="pull-right">
-     <a href="{{ ci_pipeline.ci_project_web_url }}" target="_blank">
-       {{ ci_pipeline.ci_project_details_json|get_item:"name" }}</a>&nbsp;&nbsp;
-     <a class="btn btn-default" href="{% url 'package-view' ci_pipeline.ci_package.package_name %}">
-       Back to {{ ci_pipeline.ci_package.package_name|title }}</a>
+     <a href="{{ logs.0.ci_pipeline.ci_project_web_url }}" target="_blank">
+       {{ logs.0.ci_pipeline.ci_project_details_json|get_item:"name" }}</a>&nbsp;&nbsp;
+     <a class="btn btn-default" href="{% url 'package-view' logs.0.ci_pipeline.ci_package.package_name %}">
+       Back to {{ logs.0.ci_pipeline.ci_package.package_name|title }}</a>
     </small>
   {% endif %}
 {% endblock %}
 
 {% block pipeline-navigation %}
   <ul class="nav nav-tabs nav-tabs-pf">
-    <li><a href="{% url 'pipeline-details' ci_pipeline %}">Platform Jobs</a></li>
-    <li class="active"><a href="{% url 'pipeline-sync-logs' ci_pipeline.ci_pipeline_uuid %}">
+    <li><a href="{% url 'pipeline-details' logs.0.ci_pipeline.ci_pipeline_uuid %}">Platform Jobs</a></li>
+    <li class="active"><a href="{% url 'pipeline-sync-logs' logs.0.ci_pipeline %}">
       Sync Logs</a></li>
-    <li><a href="{% url 'pipeline-configurations' ci_pipeline.ci_pipeline_uuid %}">
+    <li><a href="{% url 'pipeline-configurations' logs.0.ci_pipeline.ci_pipeline_uuid %}">
       Configurations</a></li>
   </ul>
 {% endblock %}
 
 {% block pipeline-content %}
-  <h3>Push, Pull, Update Job Sync Logs</h3>
+{% if logs %}
+<div class="panel-group" id="accordion">
+    {% for log in logs %}
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    {{ log.job_start_time|date }}&nbsp;&nbsp;&nbsp;
+                    <a data-toggle="collapse" data-parent="#accordion" href="#{{ log.job_uuid }}">
+                        <span style="color:grey">Job#</span> {{ log.job_uuid }}
+                    </a>&nbsp;&nbsp;&nbsp;
+                    <span style="color:grey">Type#</span> {{ log.job_type|title }}
+                    {% if log.job_remarks %}
+                    &nbsp;&nbsp;&nbsp;<span style="color:grey">Remarks#</span> {{ log.job_remarks }}
+                    {% endif %}
+                    <span class="pull-right">
+                        {% if log.job_result %}
+                            <span class="text-success">Succeed</span>
+                        {% else %}<span class="text-danger">Failed</span>{% endif %}
+                    </span>
+                </h4>
+            </div>
+            <div id="{{ log.job_uuid }}" class="panel-collapse collapse {% if forloop.counter == 1 %}in{% endif %}">
+                <div class="panel-body">
+                    <p><span class="fa fa-clock-o" aria-hidden="true"></span><span class="text-info">
+                        {% if log.job_start_time %}Started at <strong>{{ log.job_start_time|time:"H:i:s" }}</strong>{% endif %}
+                        {% if log.job_end_time %} and completed at <strong>{{ log.job_end_time|time:"H:i:s" }}</strong>
+                        &nbsp;&nbsp;<em>({{ log.duration|floatformat:"0" }} seconds)</em>{% endif %}</span>
+                        {% if log.triggered_by %}
+                        &nbsp;&nbsp;&nbsp;<span><i>Triggered By</i> <span class="text-info">{{ log.triggered_by }}</span> </span>
+                        {% endif %}
+                        {% if log.job_visible_on_url %}
+                            <span class="pull-right btn btn-default"><a href="{% url 'log-detail' log.job_uuid %}" style="text-decoration: none;">Job Details</a>&nbsp;
+                            <span class="fa fa-angle-right"></span></span>
+                        {% endif %}
+                    </p>
+                    <hr/><h3>Tasks</h3>
+                    <p>
+                        <div class="list-group">
+                            {% for task, details in log.job_log_json.items %}
+                            <a href="#" class="list-group-item">
+                              <h4 class="list-group-item-heading">{{ task }}</h4>
+                                {% for datetime, event in details.items|dictsortreversed:0 %}
+                                    <p class="list-group-item-text">
+                                        <strong>{{ datetime|truncatechars:22 }}&nbsp;&nbsp;&nbsp;</strong>
+                                        {{ event|truncatechars:200 }}
+                                    </p>
+                                {% endfor %}
+                            </a>
+                            {% endfor %}
+                        </div>
+                    </p>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+</div>
+{% else %}
+    <h2>No Job Logs <small>here!</small></h2>
+{% endif %}
 {% endblock %}
