--- a/dashboard/templates/ci/pipeline_configurations.html
+++ b/dashboard/templates/ci/pipeline_configurations.html
@@ -5,7 +5,7 @@
 <script>
   $(document).ready(function(){
 
-    $("#li-push").addClass('active');
+    $("#li-configurations").addClass('active') && $("#li-push").addClass('active');
 
     var selector = '#sub-ul li';
     $(selector).on('click', function(){
@@ -16,26 +16,6 @@
 
   });
 </script>
-{% endblock %}
-
-{% block pipeline-heading %}
-  {% if ci_pipeline.ci_project_details_json|get_item:"name" %}
-    <small class="pull-right">
-     <a href="{{ ci_pipeline.ci_project_web_url }}" target="_blank">
-       {{ ci_pipeline.ci_project_details_json|get_item:"name" }}</a>&nbsp;&nbsp;
-     <a class="btn btn-default" href="{% url 'package-view' ci_pipeline.ci_package.package_name %}">
-       Back to {{ ci_pipeline.ci_package.package_name|title }}</a>
-    </small>
-  {% endif %}
-{% endblock %}
-
-{% block pipeline-navigation %}
-  <ul class="nav nav-tabs nav-tabs-pf">
-    <li><a href="{% url 'pipeline-details' ci_pipeline.ci_pipeline_uuid %}">Platform Jobs</a></li>
-    <li><a href="{% url 'pipeline-sync-logs' ci_pipeline %}">Sync Logs</a></li>
-    <li class="active"><a href="{% url 'pipeline-configurations' ci_pipeline.ci_pipeline_uuid %}">
-      Configurations</a></li>
-  </ul>
 {% endblock %}
 
 {% block pipeline-content %}
