--- a/dashboard/templates/ci/pipeline_details.html
+++ b/dashboard/templates/ci/pipeline_details.html
@@ -3,31 +3,8 @@
 
 {% block extrascript %}
   <script>
-    function copyToClipboard(t,o){var e=document.queryCommandSupported("copy"),i=o.attr("data-original-title");if(!0===e){var a=document.createElement("textarea");a.value=t,document.body.appendChild(a),a.select();try{var d=document.execCommand("copy")?"Copied!":"Whoops, not copied!";o.attr("data-original-title",d).tooltip("show")}catch(t){console.log("Oops, unable to copy")}document.body.removeChild(a),o.attr("data-original-title",i)}else window.prompt("Copy to clipboard: Ctrl+C or Command+C, Enter",t)}$(document).ready(function(){$(".js-tooltip").tooltip(),$(".js-copy").click(function(){copyToClipboard($(this).attr("data-copy"),$(this))})});
+    $(document).ready(function(){$("#li-platform-jobs").addClass('active')});
   </script>
-{% endblock %}
-
-{% block pipeline-heading %}
-  {% if ci_pipeline.ci_project_details_json|get_item:"name" %}
-    <small class="pull-right">
-     <a href="{{ ci_pipeline.ci_project_web_url }}" target="_blank">
-       {{ ci_pipeline.ci_project_details_json|get_item:"name" }}</a>&nbsp;&nbsp;
-     <button class="btn btn-default btn-copy js-tooltip js-copy" type="button" data-toggle="tooltip"
-      data-placement="bottom" data-copy="{{ request.build_absolute_uri }}{{ object.get_absolute_url }}"
-      title="Copy URL"><span class="fa fa-clipboard"></span></button>
-     <a class="btn btn-default" href="{% url 'package-view' ci_pipeline.ci_package.package_name %}">
-       Back to {{ ci_pipeline.ci_package.package_name|title }}</a>
-    </small>
-  {% endif %}
-{% endblock %}
-
-{% block pipeline-navigation %}
-  <ul class="nav nav-tabs nav-tabs-pf">
-    <li class="active"><a href="{% url 'pipeline-details' ci_pipeline.ci_pipeline_uuid %}">Platform Jobs</a></li>
-    <li><a href="{% url 'pipeline-sync-logs' ci_pipeline %}">Sync Logs</a></li>
-    <li><a href="{% url 'pipeline-configurations' ci_pipeline.ci_pipeline_uuid %}">
-      Configurations</a></li>
-  </ul>
 {% endblock %}
 
 {% block pipeline-content %}
@@ -41,7 +18,7 @@
                 <div><span>{{ k|title }}</span>:
                   <span class="text-info" style="font-size:small; margin-left:2%">
                     {% if not v %}
-                      ..
+                      <span class="text-muted">..</span>
                     {% elif 'date' in k %}
                       {{ v|parse_memsource_time }}
                     {% else %}{{ v }}{% endif %}
