--- a/dashboard/templates/ci/pipeline_details_base.html
+++ b/dashboard/templates/ci/pipeline_details_base.html
@@ -10,11 +10,23 @@
     <div class="card-pf card-pf-utilization content-area">
       <div class="card-pf-heading">
         <h1>Pipeline Details
-          {% block pipeline-heading %}{% endblock %}
+          {% if ci_pipeline.ci_project_details_json|get_item:"name" %}
+            <small class="pull-right">
+             <a href="{{ ci_pipeline.ci_project_web_url }}" target="_blank">
+               {{ ci_pipeline.ci_project_details_json|get_item:"name" }}</a>&nbsp;&nbsp;
+             <a class="btn btn-default" href="{% url 'package-view' ci_pipeline.ci_package.package_name %}">
+               Back to {{ ci_pipeline.ci_package.package_name|title }}</a>
+            </small>
+          {% endif %}
         </h1>
       </div>
 
-      {% block pipeline-navigation %}{% endblock %}
+      <ul class="nav nav-tabs nav-tabs-pf">
+        <li id="li-platform-jobs"><a href="{% url 'pipeline-details' ci_pipeline.ci_pipeline_uuid %}">Platform Jobs</a></li>
+        <li id="li-sync-logs"><a href="{% url 'pipeline-sync-logs' ci_pipeline %}">Sync Logs</a></li>
+        <li id="li-configurations"><a href="{% url 'pipeline-configurations' ci_pipeline.ci_pipeline_uuid %}">
+          Configurations</a></li>
+      </ul>
 
       <div class="card-pf-body">
         {% block pipeline-content %}{% endblock %}
