--- a/dashboard/templates/ci/pipeline_sync_logs.html
+++ b/dashboard/templates/ci/pipeline_sync_logs.html
@@ -2,27 +2,7 @@
 {% load custom_tags %}
 
 {% block extrascript %}
-{% endblock %}
-
-{% block pipeline-heading %}
-  {% if logs.0.ci_pipeline.ci_project_details_json|get_item:"name" %}
-    <small class="pull-right">
-     <a href="{{ logs.0.ci_pipeline.ci_project_web_url }}" target="_blank">
-       {{ logs.0.ci_pipeline.ci_project_details_json|get_item:"name" }}</a>&nbsp;&nbsp;
-     <a class="btn btn-default" href="{% url 'package-view' logs.0.ci_pipeline.ci_package.package_name %}">
-       Back to {{ logs.0.ci_pipeline.ci_package.package_name|title }}</a>
-    </small>
-  {% endif %}
-{% endblock %}
-
-{% block pipeline-navigation %}
-  <ul class="nav nav-tabs nav-tabs-pf">
-    <li><a href="{% url 'pipeline-details' logs.0.ci_pipeline.ci_pipeline_uuid %}">Platform Jobs</a></li>
-    <li class="active"><a href="{% url 'pipeline-sync-logs' logs.0.ci_pipeline %}">
-      Sync Logs</a></li>
-    <li><a href="{% url 'pipeline-configurations' logs.0.ci_pipeline.ci_pipeline_uuid %}">
-      Configurations</a></li>
-  </ul>
+<script>$(document).ready(function(){$("#li-sync-logs").addClass('active');});</script>
 {% endblock %}
 
 {% block pipeline-content %}
@@ -83,6 +63,6 @@
     {% endfor %}
 </div>
 {% else %}
-    <h2>No Job Logs <small>here!</small></h2>
+    <h3>No Sync Logs <small>here!</small></h3>
 {% endif %}
 {% endblock %}
