--- a/dashboard/templates/ci/pipeline_jobs.html
+++ b/dashboard/templates/ci/pipeline_jobs.html
@@ -12,7 +12,10 @@
     <div class="row row-cards-pf">
       {% for p_job in ci_pipeline.ci_platform_jobs_json %}
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="card-pf card-pf-accented">
+            <div class="card-pf">
+              <div class="card-pf-heading">
+                <h3>{{ p_job|pop_item:"uid" }}</h3>
+              </div>
               <div class="card-pf-body">
               {% for k, v in p_job.items %}
                 <div><span>{{ k|title }}</span>:
