--- a/dashboard/templates/ci/pipeline_jobs.html
+++ b/dashboard/templates/ci/pipeline_jobs.html
@@ -24,6 +24,10 @@
                       <span class="text-muted">..</span>
                     {% elif 'date' in k %}
                       {{ v|parse_memsource_time }}
+                    {% elif k == 'providers' %}
+                      {{ v.0|get_item:'firstName' }} {{ v.0|get_item:'lastName' }}
+                    {% elif k == 'status' and v == 'COMPLETED' %}
+                      <span class="text-success">{{ v }}</span>
                     {% else %}{{ v }}{% endif %}
                   </span>
                 </div>
