--- a/dashboard/templates/packages/package_view.html
+++ b/dashboard/templates/packages/package_view.html
@@ -94,7 +94,8 @@
           <a type="button" class="btn btn-default" href="{% url 'jobs-logs-package' package_name %}"
              data-toggle="tooltip" title="{{ package_name }} logs">
           <span class="fa fa-bolt" aria-hidden="true"></span> Related Jobs</a>&nbsp;&nbsp;
-          <a href="{{request.META.HTTP_REFERER}}" class="btn btn-default btn-small">Go Back</a>
+          <a href="{{request.META.HTTP_REFERER}}" class="btn btn-default btn-small">
+            <span class="fa fa-chevron-left"></span> Go Back</a>
       </span>
       <br/><br/>
       <span id="span-alerts" class="text-warning pull-right"></span>
