update docs and polish coverage UI a bit

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -9,7 +9,7 @@
   <meta name="author" content="suanand@redhat.com">
   <link rel="icon" href="/static/img/favicon.ico">
 
-  <title>{{ app_desc }}</title>
+  <title>{{ app_name }}</title>
   <!-- PatternFly CSS -->
   <link rel="stylesheet" type="text/css" href="/static/patternfly/dist/css/patternfly.css">
   <link rel="stylesheet" type="text/css" href="/static/patternfly/dist/css/patternfly-additions.css">
