--- a/dashboard/templates/ci/pipeline_details_base.html
+++ b/dashboard/templates/ci/pipeline_details_base.html
@@ -25,8 +25,8 @@
         <li id="li-platform-jobs"><a href="{% url 'pipeline-details' ci_pipeline.ci_pipeline_uuid %}">
           {{ ci_pipeline.ci_platform.engine_name|title }} Jobs</a></li>
         <li id="li-sync-logs"><a href="{% url 'pipeline-history' ci_pipeline %}">History</a></li>
-        <li id="li-configurations"><a href="{% url 'pipeline-configuration' ci_pipeline.ci_pipeline_uuid %}">
-          Configuration</a></li>
+        <!--<li id="li-configurations"><a href="{% url 'pipeline-configuration' ci_pipeline.ci_pipeline_uuid %}">-->
+          <!--Configuration</a></li>-->
       </ul>
 
       <div class="card-pf-body">
