--- a/dashboard/templates/ci/pipeline_details_base.html
+++ b/dashboard/templates/ci/pipeline_details_base.html
@@ -14,8 +14,12 @@
             <small class="pull-right">
              <a href="{{ ci_pipeline.ci_project_web_url }}" target="_blank">
                {{ ci_pipeline.ci_project_details_json|get_item:"name" }}</a>&nbsp;&nbsp;
+             <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-default" data-toggle="tooltip"
+                       data-placement="bottom" title="Go Back"><span class="fa fa-chevron-left"></span> Go Back</a>
              <a class="btn btn-default" href="{% url 'package-view' ci_pipeline.ci_package.package_name %}">
-               Back to {{ ci_pipeline.ci_package.package_name|title }}</a>
+               {{ ci_pipeline.ci_package.package_name|title }}</a>
+             <a class="btn btn-default" href="{% url 'pipelines' %}">
+               Pipelines</a>
             </small>
           {% endif %}
         </h1>
